--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --app-red: red;
   --app-green: green;
   --guess-black: rgb(24, 26, 27);
+  --guess-gray: rgb(145, 145, 145);
   --guess-yellow: rgb(255, 204, 0);
   --guess-green: rgb(0, 204, 136);
   --guess-text-red: red;
@@ -15,7 +16,6 @@ html {
 }
 body {
   height: 100%;
-
   background: var(--black);
   color: var(--white);
   font-family: "Outfit", sans-serif;
@@ -138,7 +138,6 @@ button {
 .keyboard {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(4, auto);
   row-gap: 2px;
   column-gap: 2px;
   font-size: calc(var(--app-width) / 20);
@@ -205,6 +204,8 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
+
+  background: rgba(20, 20, 20, 0.6);
 
   display: flex;
   align-items: center;
