--- a/src/index.css
+++ b/src/index.css
@@ -221,6 +221,7 @@ button {
   background: rgba(20, 20, 20, 0.6);
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -236,6 +237,10 @@ button {
 
   display: flex;
   flex-direction: column;
+  overflow: auto;
+}
+.separator {
+  width: 100%;
 }
 .close {
   margin-top: calc(var(--app-width) / 30);
