--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ button {
 }
 .row-1 {
   display: grid;
-  grid-template-columns: auto auto 1fr auto auto;
+  grid-template-columns: auto auto 1fr auto auto auto;
   column-gap: 8px;
   align-items: center;
   justify-content: center;
@@ -77,8 +77,7 @@ button {
   text-align: center;
   font-size: calc(var(--app-width) / 18.5);
 }
-.help,
-.fullscreen {
+.icon {
   cursor: pointer;
   width: calc(var(--app-width) / 18.5);
 }
