Indicate if it is not possible to win

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,9 @@ button {
   display: flex;
   justify-content: space-between;
 }
+.cannot-win {
+  color: var(--guess-text-red);
+}
 .timer {
   font-family: monospace;
 }
