Implement wide mode

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,9 @@ button {
   --guess-yellow: rgb(96, 165, 250);
   --guess-green: rgb(251, 146, 60);
 }
+.game.wide {
+  max-width: calc(var(--app-max-width) * 2);
+}
 
 /* Header */
 .header {
@@ -106,6 +109,9 @@ button {
     calc(var(--app-width) / 75);
   column-gap: calc(var(--app-width) / 75);
   row-gap: calc(var(--app-width) / 25);
+}
+.game.wide .boards {
+  grid-template-columns: repeat(8, auto);
 }
 
 .board {
@@ -157,6 +163,10 @@ button {
 }
 .keyboard.hidden {
   display: none;
+}
+.game.wide .keyboard {
+  justify-self: center;
+  width: var(--app-max-width);
 }
 
 .key {
