Added setting to toggle hiding animation

--- a/src/index.css
+++ b/src/index.css
@@ -123,20 +123,28 @@ button {
 }
 .board.complete {
   filter: contrast(0.5) brightness(0.5);
-  opacity: 1;
 }
-.game.hide-completed-boards .board.complete {
+
+.game.hide-completed-boards:not(.animate-hiding) .board.complete {
+  opacity: 0;
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  left: -999em;
+}
+
+.game.hide-completed-boards.animate-hiding .board.complete {
   animation-duration: 600ms;
   animation-name: hide;
-  animation-fill-mode: forwards;
+  animation-fill-mode: both;
 }
 
 @keyframes hide {
   0% {
-    opacity: 1;
+    opacity: 1
   }
 
-  90% {
+  99% {
     opacity: 0;
   }
 
@@ -288,4 +296,12 @@ button {
 /* Settings */
 .group label {
   margin-left: calc(var(--app-width) / 75);
+}
+
+.group.animate-hiding {
+  margin-left: calc(var(--app-width) / 25);
+}
+
+.group.animate-hiding.active {
+  opacity: 0.5;
 }
