--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,10 @@ button {
   color: var(--black);
   background: var(--guess-green);
 }
+.chip.highlight {
+  color: var(--black);
+  background: var(--white);
+}
 
 /* Boards */
 .boards {
